Change PROJECT_BUILD_COMMAND to a list to be parsable by external project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,7 +124,7 @@ include(ExternalProject)
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
     set(PROJECT_BUILD_COMMAND "")
 else()
-    set(PROJECT_BUILD_COMMAND "--parallel 10")
+    list(append PROJECT_BUILD_COMMAND "--parallel" "10")
 endIF()
 
 
